# openapi.yaml
@@ -225,11 +225,19 @@ components:
           description: Internal identifier for the configured API (created automatically).
           readOnly: true
           nullable: true
-        gwid:
+        elionaTenantId:
+          type: string
+          description: The Eliona tenant where the assets are created.
+          example: "68d276c1-5010-8327-8514-344e304da11d"
+        elionaSiteId:
+          type: string
+          description: The Eliona site where the assets are created.
+          example: "eb7f1610-782b-453b-84a6-839135aa2625"
+        gwId:
           type: string
           description: The ID of the gateway device used in the API requests (gwid).
           example: "123456789"
-        clientID:
+        clientId:
           type: string
           description: The client ID used for OAuth 2.0 authentication.
           example: "your-client-id"
@@ -238,7 +246,7 @@ components:
           format: password
           description: The client secret used for OAuth 2.0 authentication.
           example: "your-client-secret"
-        appPublicAPIURL:
+        appPublicApiUrl:
           type: string
           format: url
           description: URL of this app's public API. Inferred automatically from request.
@@ -262,24 +270,14 @@ components:
           nullable: true
           example:
             [
-              [{ "parameter": "deviceName", "regex": "Main.*" }, { "parameter": "deviceType", "regex": "110" }],
-              [{ "parameter": "macAddress", "regex": "(70:82:0e:12:28:cc|70:56:06:12:.*)" }],
-              [{ "parameter": "ipAddress", "regex": "192\\.168\\..*" }],
+              [{ "parameter": "openBOSTags", "regex": ".*:meter:.*" }, { "parameter": "isSpace", "regex": "false" }],
+              [{ "parameter": "isSpace", "regex": "true" }]
             ]
         active:
           type: boolean
           readOnly: true
           description: Set to `true` by the app when running and to `false` when app is stopped
           nullable: true
-        projectIDs:
-          type: array
-          description: List of Eliona project ids for which this device should collect data. For each project id all smart devices are automatically created as an asset in Eliona. The mapping between Eliona is stored as an asset mapping in the OpenBOS app.
-          nullable: true
-          items:
-            type: string
-          example:
-            - "42"
-            - "99"
         userId:
           type: string
           readOnly: true
